--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -153,7 +153,7 @@
        </property>
        <property name="maximumSize">
         <size>
-         <width>200</width>
+         <width>220</width>
          <height>16777215</height>
         </size>
        </property>
@@ -274,14 +274,23 @@
         </item>
         <item>
          <layout class="QHBoxLayout" name="horizontalLayout_4">
+          <property name="spacing">
+           <number>5</number>
+          </property>
           <item>
            <widget class="QPushButton" name="_applyFilterBtn">
             <property name="enabled">
              <bool>false</bool>
             </property>
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
             <property name="minimumSize">
              <size>
-              <width>130</width>
+              <width>0</width>
               <height>0</height>
              </size>
             </property>
@@ -294,6 +303,15 @@
            <widget class="QCheckBox" name="_checkAll">
             <property name="enabled">
              <bool>false</bool>
+            </property>
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="layoutDirection">
+             <enum>Qt::LeftToRight</enum>
             </property>
             <property name="text">
              <string>All</string>
